tests/functional2/lang/parser-token-whitespace/(0https:--a).err.exp
error: whitespace between function arguments or list elements is required here. Use --extra-deprecated-features tokens-no-whitespace to disable this error
       at «string»:1:12:
            1| with {}; (0https://a)
             |            ^
